--- a/force-app/main/default/lwc/pagination/pagination.html
+++ b/force-app/main/default/lwc/pagination/pagination.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="slds-grid slds-align-center">
+    <div class="slds-grid ">
         <lightning-button-icon
             icon-name="utility:chevronleft"
             alternative-text="Previous"
